2014-08-26  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/configure_alert_action.php,
	include/help/clippy/godmode_agentes_modificar_agente.php,
	include/help/clippy/homepage.php,
	include/help/clippy/module_unknow.php,
	include/help/clippy/godmode_agentes_configurar_agente.php,
	include/help/clippy/godmode_alerts_alert_actions.php,
	include/help/clippy/operation_agentes_ver_agente.php,
	include/help/clippy/godmode_alerts_configure_alert_action.php,
	include/help/clippy/operation_agentes_status_monitor.php,
	include/help/en/help_context_pandora_server_email.php,
	include/functions_clippy.php, operation/menu.php,
	operation/agentes/status_monitor.php: some changes suggested by
	Carla.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/setup/setup_general.php: Improved timezone
	edition.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>

	* include/help/en/help_propagate_acl.php
	  include/help/es/help_propagate_acl.php: Added help.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/groups/group_list.php: Fixed bug listing
	group hierarchy.

2014-08-25  Vanessa Gil <vanessa.gil@artica.es>

	* godmode/groups/configure_group.php
	  include/functions_tags.php
	  operation/events/events.build_query.php
	  operation/events/events.build_table.php: Fixed ACL propagation + Tags. 
	Tickets #1079 and #1072.

2014-08-22  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* pandoradb.sql,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql: Fixed the id column in an
	alert command insertion.

2014-08-22  Junichi Satoh  <junichi@rworks.jp>

	* mobile/operation/events.php: Fixed present event filter loading
	failure.

2014-08-21  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/functions_networkmap.php,
	  operation/agentes/networkmap.dinamic.php,
	  operation/agentes/networkmap.php: Renamed some text
	from 'dinamic' to 'dynamic'.

2014-08-21  Alejandro Gallardo <alejandro.gallardo@artica.es>
	