@@ -136,9 +136,9 @@ tr.introjs-showElement > th {
 
 .introjs-tooltip {
   position: absolute;
-  padding: 10px;
+  padding: 20px;
   background-color: white;
-  min-width: 200px;
+  min-width: 260px;
   max-width: 300px;
   border-radius: 3px;
   box-shadow: 0 1px 10px rgba(0,0,0,.4);
