@@ -285,7 +285,7 @@ fieldset legend {
 #menu_tab_frame_view {
 	display: block !important;
 	background-color: #5B5B5B;
-	border-bottom: 1px solid #6db431;
+	border-bottom: 1px solid #82b92e;
 	margin-left:-8px;
 	min-height:25px;
 	/*padding-right:28px;*/
