@@ -1158,7 +1158,7 @@ table.tactical_bars {
 }
 
 .ui-btn-active {
-	background: #6db431 !important;
+	background: #82b92e !important;
 }
 
 span.nobold * {
